# trabalho-spark-engdados

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
data/: vendas.csv
delta/: index.html
docs/: 404.html
iceberg/: index.html
meu-projeto-spark/: 404.html  index.html
meu-projeto-spark/css/: bootstrap.min.css
meu-projeto-spark/delta/: index.html
meu-projeto-spark/iceberg/: index.html
meu-projeto-spark/js/: bootstrap.min.js
meu-projeto-spark/search/: lunr.js
notebooks/: 01-delta-lake.ipynb  02-apache-iceberg.ipynb
notebooks/data/delta/vendas/: .part-00000-4d00465c-715e-45d7-923c-258128d81841-c000.snappy.parquet.crc
search/: search_index.json
site/: 404.html  index.html
site/search/: search_index.json
spark/: index.html
warehouse/default/vendas_iceberg/data/: .00000-11-9e7476ac-78c2-415e-aff9-1e4b07fd7d48-00001.parquet.crc  .00000-13-94392f64-f432-4023-af9a-87b6a180acd6-00001.parquet.crc  .00000-6-2183de74-bbad-41d7-b933-157b5f9607ac-00001.parquet.crc  .00001-14-94392f64-f432-4023-af9a-87b6a180acd6-00001.parquet.crc  .00002-15-94392f64-f432-4023-af9a-87b6a180acd6-00001.parquet.crc  .00003-16-94392f64-f432-4023-af9a-87b6a180acd6-00001.parquet.crc
warehouse/default/vendas_iceberg/metadata/: .1249bf75-7c93-42c2-8cd3-831a6c7a3717-m0.avro.crc  .19fcde80-cb16-4e3f-8755-1ec7f1e091fd-m0.avro.crc  .19fcde80-cb16-4e3f-8755-1ec7f1e091fd-m1.avro.crc  .2621e2fd-8af4-4f78-bd81-bbf63b5ffea5-m0.avro.crc  .fd2e8a00-127b-4c8b-a0d8-e06f738651f3-m0.avro.crc  .v1.metadata.json.crc  (+22 more)
(+5 files in other folders)
