[tool.poetry]
name = "trabalho-spark-engdados"
version = "1.0.0"
description = "Spark Delta Iceberg SATC"
authors = ["Vinicius Milanez vinicius.254711@alunosatc.edu.br"]

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "3.5.0"
delta-spark = "3.2.0"
jupyter = "^1.0.0"
jupyterlab = "^4.1.0"
pandas = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"